--- a/config/.env
+++ b/config/.env
@@ -4,4 +4,4 @@ TOKEN_SECRET = janeiro
 CLIENT_URL=http://localhost:3000
 CRYPTWORD="l5JmP+G0/1zB%;r8B8?2?2pcqGcL^3"
 ALGORITH="aes256"
-NODE_ENV = production
+NODE_ENV = productions
