--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^10.1.0",
+    "imagekit": "^4.1.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^6.8.1",
