Update .env for auth

--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_USER_PASS=bujumbura
 TOKEN_SECRET = janeiro
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://burundi-api-backende.onrender.com
 CRYPTWORD="l5JmP+G0/1zB%;r8B8?2?2pcqGcL^3"
 ALGORITH="aes256"
 NODE_ENV = productions
