--- a/config/.env
+++ b/config/.env
@@ -4,4 +4,5 @@ TOKEN_SECRET = janeiro
 CLIENT_URL=https://burundi-api-backende.onrender.com
 CRYPTWORD="l5JmP+G0/1zB%;r8B8?2?2pcqGcL^3"
 ALGORITH="aes256"
-NODE_ENV = development
+NODE_ENV = productions
+http://localhost:3000/login
